caso3/metabase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:v0.50.20.5
          imagePullPolicy: Always
          ports:
            - name: metabase
              containerPort: 3000
      volumes:
        - name: secret-volume
          secret:
            secretName: metabase-db-secret
        - configMap:
            name: metabase-config map
          name: config-volume
