caso3/metabase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  type: LoadBalancer
  ports:
  - port: 80
	targetPort: 3000
  selector:
	app: metabase
